fix: unify logger to slf4j (#81)