@@ -18,16 +18,16 @@ package io.agentscope.runtime.sandbox.tools.fs;
 import io.agentscope.runtime.sandbox.box.FilesystemSandbox;
 import io.agentscope.runtime.sandbox.box.Sandbox;
 import io.agentscope.runtime.sandbox.tools.SandboxTool;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.logging.Logger;
 
 public class ReadMultipleFilesTool extends FsSandboxTool {
 
-    Logger logger = Logger.getLogger(ReadMultipleFilesTool.class.getName());
+    private static final Logger logger = LoggerFactory.getLogger(ReadMultipleFilesTool.class);
 
     public ReadMultipleFilesTool() {
         super("fs_read_multiple_files", "filesystem", "Read contents of multiple files");
@@ -40,7 +40,7 @@ public class ReadMultipleFilesTool extends FsSandboxTool {
         Map<String, Object> properties = new HashMap<>();
         properties.put("paths", pathsProperty);
 
-        List<String> required = Arrays.asList("paths");
+        List<String> required = List.of("paths");
 
         schema.put("type", "object");
         schema.put("properties", properties);
@@ -62,8 +62,7 @@ public class ReadMultipleFilesTool extends FsSandboxTool {
             throw new RuntimeException("Only FilesystemSandbox supported in read multiple files tool");
         } catch (Exception e) {
             String errorMsg = "Read Multiple Files Error: " + e.getMessage();
-            logger.severe(errorMsg);
-            e.printStackTrace();
+            logger.error(errorMsg);
             return errorMsg;
         }
     }
